# pondrs

./: .gitignore  CHANGELOG.md  CLI_INTERFACE.md  CONTRIBUTING.md  Cargo.toml  NIGHTLY_FEATURES.md  PLAN_NOSTD_VALIDATION.md  README.md  STABLE_MIGRATION_REPORT.md  rust-toolchain.toml
.github/workflows/: book.yml  ci.yml
book/: book.toml  build.sh
book/src/: SUMMARY.md  introduction.md
book/src/app/: README.md  check.md  initialization.md  run.md  viz.md  yaml.md
book/src/blog/: 2026-03-30-pondrs-and-kedro.md  2026-04-22-typed-data-catalog-and-data-pipelines.md
book/src/concepts/: README.md  app.md  catalog.md  datasets.md  nodes.md  parameters.md  steps.md
book/src/datasets/: README.md  cache.md  cell.md  custom_datasets.md  lazy.md  memory.md  other.md  param.md  partitioned.md
book/src/error_handling/: README.md  datasets.md  error_type.md  nodes.md
book/src/examples/: README.md  dyn_steps.md  ident.md  register.md  sales.md  split_join.md  weather.md
book/src/hooks/: README.md  builtin.md  control.md  dataset.md  node.md  pipeline.md  typed.md
book/src/no_std/: README.md  app.md  datasets.md
book/src/params_catalog/: README.md  catalog.md  parameters.md
book/src/pipelines/: README.md  check.md  dynamic.md  nodes.md  pipeline.md  split_join.md
book/src/runners/: README.md  parallel.md  runner_trait.md  sequential.md
docs/: cli-and-viz-plan.md  pipeline-viz-design.md
examples/: dyn_steps_app.rs  ident_app.rs  minimal.rs  no_std_example.rs  plotly_example.rs  register_example.rs  sales_app.rs  sales_run.rs  sales_viz.rs  split_join_app.rs  viz_example.rs  weather_app.rs  weather_run.rs  weather_viz.rs
examples/dyn_steps/: mod.rs
examples/minimal_fixtures/: mod.rs
examples/sales/: mod.rs
examples/shared/: mod.rs
examples/split_join/: mod.rs
examples/weather/: mod.rs
src/: catalog_indexer.rs  datasets.rs  error.rs  lib.rs  main.rs
src/app/: cli.rs  config.rs  mod.rs
src/core/: check.rs  id_set.rs  into_result.rs  mod.rs  node.rs  pipeline.rs  steps.rs  traits.rs
src/datasets/: cache.rs  cell.rs  gpio.rs  image_dataset.rs  json.rs  lazy.rs  memory.rs  mod.rs  param.rs  partitioned.rs  plotly_dataset.rs  polars.rs  register.rs  templated.rs  text.rs  thunk.rs  yaml.rs
src/graph/: build.rs  mod.rs  types.rs  validate.rs
src/hooks/: cache.rs  logging.rs  mod.rs  timing.rs  typed.rs
src/pipeline/: check.rs  dyn_steps.rs  each_field.rs  filter.rs  ident.rs  into_result.rs  mod.rs  node.rs  partitioned_node.rs  pipeline.rs  pipeline_fn.rs  split_join.rs  stable.rs  steps.rs  traits.rs
src/runners/: mod.rs  parallel.rs  sequential.rs
src/viz/: assets.rs  hook.rs  mod.rs  serialization.rs  server.rs
tests/: app_integration.rs  cache_integration.rs  dyn_steps_run.rs  integration_pipelines.rs  lazy_partitioned_run.rs  pipeline_fn_prototype.rs  sales_run.rs  split_join_run.rs  typed_hook.rs  weather_run.rs
viz-frontend/: index.html  package-lock.json  package.json  vite.config.ts
viz-frontend/src/: App.tsx
viz-frontend/src/api/: client.ts  types.ts
viz-frontend/src/components/: DatasetPanel.tsx  GraphView.tsx  LeftPanel.tsx  StatusBar.tsx
viz-frontend/src/components/nodes/: DatasetNode.tsx  LeafNode.tsx  PipelineNode.tsx
viz-frontend/src/hooks/: useGraph.ts  useWebSocket.ts
viz-frontend/src/layout/: dagre.ts
