[package]
name = "pondrs"
version = "0.1.0"
edition = "2024"

[features]
default = ["all"]
std = ["serde/std", "dep:serde_yaml", "dep:log", "dep:clap", "dep:env_logger"]
polars = ["std", "dep:polars"]
yaml = ["std", "dep:yaml-rust2"]
plotly = ["std", "dep:plotly", "dep:serde_json"]
all = ["std", "polars", "yaml", "plotly"]

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }
yaml-rust2 = { version = "0.11.0", optional = true }
polars = { version = "0.53", features = ["parquet"], optional = true }
plotly = { version = "0.14", optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
log = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11.9", optional = true }

[dev-dependencies]
tempfile = "3"
