[package]
name = "pondrs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A pipeline execution library"
license = "Apache-2.0"
repository = "https://github.com/pond-org/pondrs"
homepage = "https://pond-org.github.io/pondrs"
documentation = "https://docs.rs/pondrs"
authors = ["Nils Bore <nilsbore@gmail.com>"]
readme = "README.md"
keywords = ["pipeline", "data", "workflow", "etl", "dag"]
categories = ["data-structures", "concurrency", "no-std", "command-line-utilities", "visualization"]

[features]
default = ["all"]
std = ["serde/std", "dep:serde_yaml", "dep:log", "dep:clap", "dep:env_logger"]
polars = ["std", "dep:polars", "dep:fastexcel"]
yaml = ["std", "dep:yaml-rust2"]
json = ["std", "dep:serde_json"]
plotly = ["std", "dep:plotly", "dep:serde_json"]
viz = ["std", "dep:axum", "dep:tokio", "dep:rust-embed", "dep:serde_json", "dep:ureq"]
image = ["std", "dep:image", "dep:base64"]
all = ["std", "json", "polars", "yaml", "plotly", "viz", "image"]

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }
yaml-rust2 = { version = "0.11.0", optional = true }
polars = { version = "0.53", features = ["parquet"], optional = true }
fastexcel = { version = "0.15.1", optional = true }
plotly = { version = "0.14", optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
log = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11.9", optional = true }
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"], optional = true }
rust-embed = { version = "8", optional = true }
ureq = { version = "3", features = ["json"], optional = true }
image = { version = "0.25", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"
